--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.2",
     "compression": "^1.7.1",
+    "lodash": "^4.17.21",
     "polka": "next",
     "sirv": "^1.0.0"
   },
